Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -35,6 +35,8 @@ steps:
     pytest
   displayName: 'pytest'
 
-- script: |
-    print("Hello World!")
+- task: PythonScript@0
+  inputs:
+    script: |
+      print('Hello World!)
   displayName: "Printing 'Hello World!'"
