--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -37,6 +37,7 @@ steps:
 
 - task: PythonScript@0
   inputs:
+    scriptSource: 'inline'
     script: |
       print('Hello World!)
   displayName: "Printing 'Hello World!'"
