Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -39,5 +39,5 @@ steps:
   inputs:
     scriptSource: 'inline'
     script: |
-      print('Hello World!)
+      print('Hello World!')
   displayName: "Printing 'Hello World!'"
