--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -20,6 +20,7 @@ strategy:
       python.version: '3.7'
 
 steps:
+- script: env
 - task: UsePythonVersion@0
   inputs:
     versionSpec: '$(python.version)'
